--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -36,10 +36,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="register.html">Register</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="../index.html">Back to Ning's page</a></li>
+                <li><a href="#">Username</a></li>
+                <li><a href="../index.html">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
@@ -83,7 +81,7 @@
                                 <input type="text" class="form-control" placeholder="role">
                             </th>
                             <th>
-                                <a href="#" class="btn btn-info" role="button">
+                                <a href="#" class="btn btn-primary" role="button">
                                     <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
                                 </a>
                                 <a href="#" class="btn btn-success" role="button">
@@ -101,7 +99,7 @@
                                 <a href="#" class="btn btn-danger" role="button">
                                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                                 </a>
-                                <a href="#" class="btn btn-primary" role="button">
+                                <a href="#" class="btn btn-warning" role="button">
                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </a>
                             </td>
@@ -114,7 +112,7 @@
                                 <a href="#" class="btn btn-danger" role="button">
                                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                                 </a>
-                                <a href="#" class="btn btn-primary" role="button">
+                                <a href="#" class="btn btn-warning" role="button">
                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </a>
                             </td>
@@ -127,7 +125,7 @@
                                 <a href="#" class="btn btn-danger" role="button">
                                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                                 </a>
-                                <a href="#" class="btn btn-primary" role="button">
+                                <a href="#" class="btn btn-warning" role="button">
                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </a>
                             </td>
