--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -36,10 +36,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="register.html">Register</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="../index.html">Back to Ning's page</a></li>
+                <li><a href="profile.html">Username</a></li>
+                <li><a href="../index.html">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
