--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a href="profile.html" class="btn btn-default" role="button">Register</a>
+                        <a href="profile.html" class="btn btn-success" role="button">Register</a>
                     </div>
                 </div>
             </form>
