--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a href="profile.html" class="btn btn-default" role="button">Update</a>
+                        <a href="profile.html" class="btn btn-success" role="button">Update</a>
                     </div>
                 </div>
             </form>
