--- a/public/assignment/register.view.html
+++ b/public/assignment/register.view.html
@@ -10,13 +10,13 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Profile</title>
+    <title>Register</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style/dashboard.css" rel="stylesheet">
+    <link href="css/dashboard.css" rel="stylesheet">
 
 
 </head>
@@ -32,11 +32,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="home.html">Form Maker</a>
+            <a class="navbar-brand" href="home.view.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="profile.html">Username</a></li>
+                <li><a href="register.view.html">Register</a></li>
+                <li><a href="login.view.html">Login</a></li>
+                <li><a href="#">Username</a></li>
                 <li><a href="../index.html">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
@@ -50,15 +52,15 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="admin.html">Admin</a></li>
-                <li><a href="forms.html">Forms</a></li>
+                <li class="active"><a href="home.view.html">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="profile.view.html">Profile</a></li>
+                <li><a href="admin.view.html">Admin</a></li>
+                <li><a href="forms.view.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
-            <h1>Profile</h1>
+            <h1>Register</h1>
 
             <form class="form-horizontal">
                 <div class="form-group">
@@ -74,18 +76,11 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="fName" class="col-sm-2 control-label">First Name:</label>
+                    <label for="verify-password" class="col-sm-2 control-label">Verify Password:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="fName" placeholder="First Name">
+                        <input type="password" class="form-control" id="verify-password" placeholder="Verify Password">
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="lName" class="col-sm-2 control-label">Last Name:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="lName" placeholder="Last Name">
-                    </div>
-                </div>
-
                 <div class="form-group">
                     <label for="email" class="col-sm-2 control-label">Email:</label>
                     <div class="col-sm-10">
@@ -94,7 +89,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a href="profile.html" class="btn btn-success" role="button">Update</a>
+                        <a href="profile.view.html" class="btn btn-success" role="button">Register</a>
                     </div>
                 </div>
             </form>
@@ -107,7 +102,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 </body>
