--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -39,8 +39,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
 <script src="app.js"></script>
 <script src="config.js"></script>
+<script src="views/services/user.service.client.js"></script>
 <script src="views/main/main.controller.js"></script>
 <script src="views/header/header.controller.js"></script>
+<script src="views/users/register.controller.js"></script>
+
 
 </body>
 </html>
