--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -44,6 +44,7 @@
 <script src="views/header/header.controller.js"></script>
 <script src="views/users/register.controller.js"></script>
 <script src="views/users/profile.controller.js"></script>
+<script src="views/users/login.controller.js"></script>
 
 
 </body>
