--- a/public/project/index.html
+++ b/public/project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="FindDoctorApp">
 
 <head>
 
@@ -33,52 +33,11 @@
 
 <body>
 
-<!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Start Bootstrap</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
+<div ng-include="'views/header/header.view.html'"></div>
 
 <!-- Page Content -->
-<div class="container">
-
-    <div class="row">
-        <div class="col-lg-12 text-center">
-            <ul class="list-inline">
-                <li><label>I'm looking for:</label><input class="form-control" placeholder="Doctor Name"></li>
-                <li><label>Who is a:</label><input class="form-control" placeholder="Primary Care Doctor"></li>
-                <li><label>In:</label><input class="form-control" placeholder="Zip Code/City/State"></li>
-                <li><button class="btn btn-default">Search</button></li>
-            </ul>
-        </div>
-    </div>
-    <!-- /.row -->
+<div class="container-fluid">
+    <div ng-view></div>
 
 </div>
 <!-- /.container -->
@@ -88,6 +47,12 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
+
+<script src="app.js"></script>
+<script src="config.js"></script>
 
 </body>
 
