--- a/public/project/index.html
+++ b/public/project/index.html
@@ -54,6 +54,7 @@
 <script src="app.js"></script>
 <script src="config.js"></script>
 <script src="views/main/main.control.js"></script>
+<script src="views/search/result.controller.js"></script>
 
 </body>
 
