--- a/public/project/index.html
+++ b/public/project/index.html
@@ -34,7 +34,7 @@
 <body>
 
 <div ng-include="'views/header/header.view.html'"></div>
-<div ng-hide="" ng-include="'views/searchBar/searchBar.view.html'"></div>
+<div ng-include="'views/searchBar/searchBar.view.html'"></div>
 
 <!-- Page Content -->
 <div class="container-fluid">
