--- a/public/project/index.html
+++ b/public/project/index.html
@@ -66,6 +66,7 @@
 <script src="views/reviews/review.control.js"></script>
 <script src="views/messages/message.control.js"></script>
 <script src="views/reviews/editeReview.control.js"></script>
+<script src="views/favorites/favoriteDetail.control.js"></script>
 
 </body>
 
