--- a/public/project/index.html
+++ b/public/project/index.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="style/bootstrap.min.css" rel="stylesheet">
+    <link href="style/style.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <style>
