--- a/public/index.html
+++ b/public/index.html
@@ -151,8 +151,8 @@
             <div class="col-lg-5 col-sm-6">
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-                <h2 class="section-heading">Learning Materials</h2>
-                <p class="lead">Here are all the <a href="#">materials</a> I'm using.</p>
+                <h2 class="section-heading">Porject Documents</h2>
+                <p class="lead">Here is my <a href="https://docs.google.com/document/d/1a88ixd2JsisVBZg6KekUYIAmvCs8BnjadWqrOEcmqYE/edit?usp=sharing">project proposal</a>.</p>
             </div>
             <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                 <img class="img-responsive" src="img/phones.png" alt="">
