--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="css/dashboard.css" rel="stylesheet">
+    <link href="../css/dashboard.css" rel="stylesheet">
 </head>
 
 <body ng-controller="MainController">
@@ -33,8 +33,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
 <script src="app.js"></script>
 <script src="config.js"></script>
-<script src="views/services/user.service.client.js"></script>
-<script src="views/services/forms.service.client.js"></script>
+<script src="services/user.service.client.js"></script>
+<script src="services/forms.service.client.js"></script>
 <script src="views/main/main.controller.js"></script>
 <script src="views/header/header.controller.js"></script>
 <script src="views/users/register.controller.js"></script>
