--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -35,12 +35,14 @@
 <script src="config.js"></script>
 <script src="services/user.service.client.js"></script>
 <script src="services/forms.service.client.js"></script>
+<script src="services/field.service.client.js"></script>
 <script src="views/main/main.controller.js"></script>
 <script src="views/header/header.controller.js"></script>
 <script src="views/users/register.controller.js"></script>
 <script src="views/users/profile.controller.js"></script>
 <script src="views/users/login.controller.js"></script>
 <script src="views/forms/forms.controller.js"></script>
+<script src="views/forms/fields.controller.js"></script>
 
 </body>
 </html>
