--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -28,6 +28,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
@@ -43,6 +44,7 @@
 <script src="views/users/login.controller.js"></script>
 <script src="views/forms/forms.controller.js"></script>
 <script src="views/forms/fields.controller.js"></script>
+<script src="directive/lnSortable.js"></script>
 
 </body>
 </html>
