--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -47,6 +47,9 @@
 <script src="views/forms/forms.controller.js"></script>
 <script src="views/forms/fields.controller.js"></script>
 <script src="views/forms/singleLinePop.controller.js"></script>
+<script src="views/forms/multipleLinePop.controller.js"></script>
+<script src="views/forms/datePop.controller.js"></script>
+<script src="views/forms/dropDownPop.controller.js"></script>
 <script src="directive/lnSortable.js"></script>
 
 </body>
