--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -51,6 +51,7 @@
 <script src="views/forms/datePop.controller.js"></script>
 <script src="views/forms/dropDownPop.controller.js"></script>
 <script src="views/forms/emailPop.controller.js"></script>
+<script src="views/forms/checkboxPop.controller.js"></script>
 <script src="directive/lnSortable.js"></script>
 
 </body>
