--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -56,6 +56,7 @@
 <script src="views/search/result.control.js"></script>
 <script src="views/search/detail.control.js"></script>
 <script src="services/doctorSearch.service.js"></script>
+<script src="services/doctor.service.client.js"></script>
 <script src="services/user.service.client.js"></script>
 <script src="views/users/login.control.js"></script>
 <script src="views/users/register.control.js"></script>
