--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -58,6 +58,7 @@
 <script src="services/doctorSearch.service.js"></script>
 <script src="services/doctor.service.client.js"></script>
 <script src="services/user.service.client.js"></script>
+<script src="services/review.service.client.js"></script>
 <script src="views/users/login.control.js"></script>
 <script src="views/users/register.control.js"></script>
 <script src="views/users/profile.control.js"></script>
