--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -44,6 +44,7 @@
 <script src="views/users/register.controller.js"></script>
 <script src="views/users/profile.controller.js"></script>
 <script src="views/users/login.controller.js"></script>
+<script src="views/admin/admin.controller.js"></script>
 <script src="views/forms/forms.controller.js"></script>
 <script src="views/forms/fields.controller.js"></script>
 <script src="views/forms/singleLinePop.controller.js"></script>
