--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -48,6 +48,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.4/ui-bootstrap-tpls.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
 
 <script src="app.js"></script>
@@ -70,6 +71,7 @@
 <script src="views/messages/message.control.js"></script>
 <script src="views/reviews/editeReview.control.js"></script>
 <script src="views/favorites/favoriteDetail.control.js"></script>
+<script src="views/search/insuranceDetail.control.js"></script>
 
 </body>
 
