--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -8,11 +8,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bare - Start Bootstrap Template</title>
+    <title>Find A Doctor App</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../style/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="../style/bootstrap.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="../style/style.css" rel="stylesheet">
+    <link href="../style/angular-input-stars.css" rel="stylesheet">
+
 
     <!-- Custom CSS -->
     <style>
@@ -42,14 +46,16 @@
 <!-- /.container -->
 
 <!-- jQuery Version 1.11.1 -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.4/ui-bootstrap-tpls.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
+<script src="../js/angular-input-stars.js"></script>
+
 
 <script src="app.js"></script>
 <script src="config.js"></script>
