--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -16,6 +16,8 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="../style/style.css" rel="stylesheet">
     <link href="../style/angular-input-stars.css" rel="stylesheet">
+    <link href="../style/jk-rating-stars.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
     <!-- Custom CSS -->
@@ -55,6 +57,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.4/ui-bootstrap-tpls.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
 <script src="../js/angular-input-stars.js"></script>
+<script src="../js/jk-rating-stars.js"></script>
 
 
 <script src="app.js"></script>
