--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -82,6 +82,7 @@
 <script src="views/favorites/favoriteDetail.control.js"></script>
 <script src="views/search/insuranceDetail.control.js"></script>
 <script src="views/search/sendMsgPop.control.js"></script>
+<script src="views/search/docVerifPop.control.js"></script>
 
 </body>
 
