--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -84,6 +84,7 @@
 <script src="views/search/sendMsgPop.control.js"></script>
 <script src="views/search/docVerifPop.control.js"></script>
 <script src="views/search/docReplyPop.control.js"></script>
+<script src="views/reviews/removePop.control.js"></script>
 
 </body>
 
