--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -80,6 +80,7 @@
 <script src="views/search/docVerifPop.control.js"></script>
 <script src="views/search/docReplyPop.control.js"></script>
 <script src="views/reviews/removePop.control.js"></script>
+<script src="views/navbar/navbar.control.js"></script>
 
 </body>
 
